--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link href="css/index.css" rel="stylesheet"/>
    <link href="css/text.css" rel="stylesheet"/>
    <title>正德金融集团</title>
+   <link rel="shortcut icon" href="images/logo.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
   </head>
   <body>
      <div class="container-fulid navbar-fixed-top nav">
