--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
    <script src="js/bootstrap.min.js"></script>
    <link href="css/index.css" rel="stylesheet"/>
    <link href="css/text.css" rel="stylesheet"/>
-   <title>正德金融集团</title>
-   <link rel="shortcut icon" href="images/logo.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
+   <meta name="keywords" content="加入我们，共创未来">
+   <link rel="shortcut icon" href="images/logo_1.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
+   <title>原油吧加盟</title>
   </head>
   <body>
      <div class="container-fulid navbar-fixed-top nav">
