--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
    <link href="css/index.css" rel="stylesheet"/>
    <link href="css/text.css" rel="stylesheet"/>
    <meta name="keywords" content="加入我们，共创未来">
-   <link rel="shortcut icon" href="images/logo_1.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
+   <link rel="shortcut icon" href="images/logo.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
    <title>原油吧加盟</title>
+   <meta name="sharecontent" data-msg-img="images/logo.png" data-msg-title="原油吧加盟" data-msg-content="加入我们，共创未来" data-msg-callBack="" data-line-img="你的缩略图地址" data-line-title="你的标题" data-line-callBack=""/>
+   
   </head>
   <body>
      <div class="container-fulid navbar-fixed-top nav">
