--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
    
   </head>
   <body>
+    <div style ="margin:0 auto;width:0px;height:0px;overflow:hidden;  ">
+        <img src="images/logo_1.png" />
+    </div>
+  
      <div class="container-fulid navbar-fixed-top nav">
 	     <img src="images/logo.png" class="img img-responsive"/>
 		 <h5>正德金融集团</h5>
