--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    
   </head>
   <body>
-    <div style ="margin:0 auto;width:0px;height:0px;overflow:hidden;  ">
-        <img src="images/logo_1.png" />
+    <div style ="margin:0 auto;width:0px;height:0px;overflow:hidden; display: none; ">
+        <img src="images/logo_1.png"  style="position: absolute; top: 0; left: 0;"/>
     </div>
   
      <div class="container-fulid navbar-fixed-top nav">
