--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <script src="js/bootstrap.min.js"></script>
    <link href="css/index.css" rel="stylesheet"/>
    <link href="css/text.css" rel="stylesheet"/>
-   <meta name="keywords" content="加入我们，共创未来">
+   <meta name="description" content="加入我们，共创未来">
    <link rel="shortcut icon" href="images/logo.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
    <title>原油吧加盟</title>
    <meta name="sharecontent" data-msg-img="images/logo.png" data-msg-title="原油吧加盟" data-msg-content="加入我们，共创未来" data-msg-callBack="" data-line-img="images/logo.png" data-line-title="原油吧加盟" data-line-callBack=""/>
