--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
    <meta name="description" content="加入我们，共创未来">
    <link rel="shortcut icon" href="images/logo.png" mce_href="//static.runoob.com/images/favicon.ico" type="image/x-icon" >
    <title>原油吧加盟</title>
-   <meta name="sharecontent" data-msg-img="images/logo.png" data-msg-title="原油吧加盟" data-msg-content="加入我们，共创未来" data-msg-callBack="" data-line-img="images/logo.png" data-line-title="原油吧加盟" data-line-callBack=""/>
    
+   
+   <meta itemprop="name" content="原油吧加盟"/>
+   <meta itemprop="image" content="images/logo.png" />
+   <meta name="description" itemprop="description" content="加入我们，共创未来" />
+
+
   </head>
   <body>
     <div style ="margin:0 auto;width:0px;height:0px;overflow:hidden; display: none; ">
@@ -177,118 +182,5 @@
 		   </div>
 		<div>	
 	
-
-	
- <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-
-<script type="text/javascript">
-
-    var imgUrl = 'images/logo_1.png';  // 分享后展示的一张图片                 var lineLink = 'http://www.baidu.com'; // 点击分享后跳转的页面地址
-
-        var descContent = "加入我们，共创未来";  // 分享后的描述信息
-
-        var shareTitle = '原油吧加盟';  // 分享后的标题
-
-        var appid = '';  // 应用id,如果有可以填，没有就留空
-
-        function shareFriend() {
-
-            WeixinJSBridge.invoke('sendAppMessage',{
-
-                "appid": appid,
-
-                "img_url": imgUrl,
-
-                "img_width": "200",
-
-                "img_height": "200",
-
-                "link": lineLink,
-
-                "desc": descContent,
-
-                "title": shareTitle
-
-            }, function(res) {
-
-                //_report('send_msg', res.err_msg);  // 这是回调函数，必须注释掉
-
-            })
-
-        }
-
-        function shareTimeline() {
-
-            WeixinJSBridge.invoke('shareTimeline',{
-
-                "img_url": imgUrl,
-
-                "img_width": "200",
-
-                "img_height": "200",
-
-                "link": lineLink,
-
-                "desc": descContent,
-
-                "title": shareTitle
-
-            }, function(res) {
-
-                   //_report('timeline', res.err_msg); // 这是回调函数，必须注释掉
-
-            });
-
-        }
-
-        function shareWeibo() {
-
-            WeixinJSBridge.invoke('shareWeibo',{
-
-                "content": descContent,
-
-                "url": lineLink,
-
-            }, function(res) {
-
-                //_report('weibo', res.err_msg);
-
-            });
-
-        }
-
-        // 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。
-
-        document.addEventListener('WeixinJSBridgeReady', functiononBridgeReady() {
-
-            // 发送给好友
-
-            WeixinJSBridge.on('menu:share:appmessage', function(argv){
-
-                shareFriend();
-
-            });
-
-           // 分享到朋友圈
-
-            WeixinJSBridge.on('menu:share:timeline', function(argv){
-
-                shareTimeline();
-
-            });
-
-            // 分享到微博
-
-            WeixinJSBridge.on('menu:share:weibo', function(argv){
-
-                shareWeibo();
-
-            });
-
-        }, false);
-
-        </script>
-	 
-	 
   </body>
 </html>
